# cookiecutter-ai-flock

./: 404.html  LICENSE.md  Makefile  README.md  checkformatter.py  checkformatterbalck.ipynb  cookiecutter.json  index.html  mkdocs.yml  pyproject.toml  sitemap.xml  tutorials_to_delete.md
api-reference/: index.html
docs/: api-reference.md  how-to-guides.md  index.md
docs/api-reference/: toc-api-reference.md
docs/assets/css/: custom.css
docs/explanation/: dvc-git-branches.md  dvc-understanding-dvs.md  effective-data-documentation.md  explanation.md  github-naming-conventions.md  ml-naming-conventions.md  model-persistence-naming-conventions.md  naming-conventions.md  toc-explanation.md
docs/how-to-guides/: commit-message-standards-ml.md  dvc-communication.md  dvc-set-up.md  dvc-vscode-extension.md  git-branch-naming-standards.md  github-actions-naming-convention.md  how-to-guides-intro.md  machine-learning-metadata-automation.md  metadata-integration-data-analysis.md  ml-data-folder-naming.md  ml-data-naming-conventions.md  offline-cookiecutter-setup.md  toc-how-to-guides.md
docs/stylesheets/: extra.css
docs/tutorials/: black-formatter.md  creating-managing-metadata-documentation.md  data-version-control.md  data.md  dvc-cloud.md  dvc-collaboration.md  dvc-local.md  gitignore.md  hydra-config.md  index.md  markdown-ml-model-documentation.md  mkdocs-docs.md  model-persistence.md  naming-conventions.md  poetry.md  ruff-linter.md  toc-tutorials.md  turorials-intro.md  windows-os-setup.md
explanation/: index.html
hooks/: post_gen_project.py  post_gen_project.sh
how-to-guides/: index.html
how-to-guides/how-to-guides-intro/: index.html
how-to-guides/offline-cookiecutter-setup/: index.html
macos/: README_macos.md
os_specific_files/: README_windows.md
tutorials/black-formatter/: index.html
tutorials/data/: index.html
tutorials/data-version-control/: index.html
tutorials/gitignore/: index.html
tutorials/hydra-config/: index.html
tutorials/mkdocs-docs/: index.html
tutorials/model-persistence/: index.html
tutorials/naming-conventions/: index.html
tutorials/poetry/: index.html
tutorials/ruff-linter/: index.html
tutorials/turorials-intro/: index.html
tutorials/windows-os-setup/: index.html
{{cookiecutter.project_slug}}/: Makefile  README.md  mkdocs.yml  pyproject.toml
{{cookiecutter.project_slug}}/.devcontainer/: devcontainer.json
{{cookiecutter.project_slug}}/.github/: CODEOWNERS
{{cookiecutter.project_slug}}/.github/scripts/: validate_naming.py
{{cookiecutter.project_slug}}/.github/workflows/: black.yaml  check_naming_convention.yml  ruff.yaml
{{cookiecutter.project_slug}}/docs/: api-reference.md  how-to-guides.md  index.md
{{cookiecutter.project_slug}}/src/servicesagerag/: utils.py
{{cookiecutter.project_slug}}/src/{{cookiecutter.package_name}}/: utils.py
